compiler/testData/diagnostics/testsWithStdLib/experimental/kt45730.kt
// !USE_EXPERIMENTAL: kotlin.RequiresOptIn

@RequiresOptIn
annotation class MyInternal
abstract class BaseClass @MyInternal constructor()
class Subclass @MyInternal constructor(): <!EXPERIMENTAL_API_USAGE_ERROR!>BaseClass<!>()
